force-app/main/default/objects/LLC_BI__Collateral_Group__c/fields/LLC_BI__Associated_Collateral__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Associated_Collateral__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <description>The system automatically populates this required lookup to indicate the collateral management record that is a part of the group.</description>
    <label>Associated Collateral</label>
    <referenceTo>LLC_BI__Collateral__c</referenceTo>
    <relationshipLabel>Collateral Groups</relationshipLabel>
    <relationshipName>Collateral_Groups</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>