force-app/main/default/objects/LLC_BI__Collateral_Group__c/fields/LLC_BI__Collateral_Group__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Collateral_Group__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The system automatically populates this required lookup to indicate the group to which the collateral management record is associated.</description>
    <label>Collateral Group</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>This value does not exist or the type and subtype pairing of the collateral does not equal group and the group_type field is null.</errorMessage>
        <filterItems>
            <field>LLC_BI__Collateral__c.LLC_BI__Collateral_Type__r.LLC_BI__Group_Type__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <infoMessage>You can only associate this record with a collateral group, where the type and subtype pairing of the collateral equals group and the group_type field is not null.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>LLC_BI__Collateral__c</referenceTo>
    <relationshipLabel>Associated Collateral</relationshipLabel>
    <relationshipName>Associated_Collateral</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>