force-app/main/default/objects/LLC_BI__Collateral_Group__c/fields/LLC_BI__Restricted__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Restricted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The user populates this optional checkbox to restrict the collateral value that is available to the group. By default, it is not selected.</description>
    <label>Restricted</label>
    <type>Checkbox</type>
</CustomField>