force-app/main/default/objects/LLC_BI__Collateral_Group__c/fields/LLC_BI__Restricted_Value__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Restricted_Value__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The user populates this currency field with the value available to the group. By default, it is blank. The system respects the populated value when the Restricted field is set to true.</description>
    <inlineHelpText>To restrict the value available to the group, enter the value you want to allocate to the group.</inlineHelpText>
    <label>Restricted Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>